refactor: map.of로 변경